project/logs/20250516_113551.log
Use Adapter : NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create DeD12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Object3D.VS.hlsl:20:50: error: use of undeclared identifier 'float322_t3x3'
    output.normal = normalize(mul(input.normal, (float322_t3x3) gTransformationMatrix.World));
                                                 ^

